        internal to public org.restlet.ext.ssl package.
      - Renamed Status#getName() method to getReasonPhrase() for more clarity
        regarding the purpose of the additional "description" property used
        for lengthier explanations.
    - Enhancements
      - Updated and consolidated the SSL/HTTPS configuration parameters
        for all HTTPS connectors.
    - Bug fixed
      - Fixed compatibility issue with GWT 2.3.
      - Fixed potential NPE in Restlet class when no context is available.
      - Fixed potential NPE in LogFilter. Reported by Aaron Summers.
      - Fixed parsing of HTTP requests with internal connector when the
        Host header was missing. Now falling back to IP address.
        Reported by Aaron Summers.
      - Fixed misleading log message when response are manually ranged
        (206 status and entity with range set). Reported by John Logsdon.
    - Misc
      - 

- 2.1 Milestone 4 (04/27/2011)
    - API changes
      - Added protected redirect(...) and retry(...) methods on on ClientResource
        to facilitate extension of default behavior such as passing on cookies.
        Suggested by Martin Svensson.
      - ClientResource#entityBuffering now buffers non transient representations of
        unknown size. Necessary for GAE chunked issue.
      - Added Server#getActualPort() to return either the value of getPort()
        or getEphemeralPort() is the listening port is '0'.
      - Message#attributes is now a ConcurrentMap instead of a Map.
        Suggested by Tal Liron.
      - ClientResource now respects any change to the clientInfo preferences
        when using dynamic proxies (via wrap() for example). It only overwrites
        them if the default preferences state (empty lists) is found at invocation
        time. Suggested by Christoph Dietze.
      - The visibility of several methods on UniformResource and ClientResource
        has been changed to public.